# e22_co2060_bloodms

./: .flake8  README.md  database_schema.sql
backEnd/: README_LINT.md  pyproject.toml
backEnd/main/: Dockerfile  Makefile  create_admin.py  db.sqlite3  requirements.txt  test_auth_model.py  verify_setup.py
backEnd/main/UserAuth/: VIEWS_DOCUMENTATION.md  admin.py  models.py  urls.py  views.py
backEnd/main/UserAuth/login/: loginView.py
backEnd/main/UserAuth/migrations/: 0001_initial.py  0002_delete_user.py  0002_hospital_osm_place_id.py
backEnd/main/UserAuth/models/: __init__.py  hospital.py  location.py  models.py
backEnd/main/UserAuth/serializer/: serializer.py
backEnd/main/UserAuth/serializer/payload/: payload.py
backEnd/main/UserAuth/serializer/request/: register.py
backEnd/main/UserAuth/serializer/response/: serializer.py
backEnd/main/api/v1/: urls.py
backEnd/main/apps/UserAuth/: admin.py  apps.py  urls.py  views.py
backEnd/main/apps/UserAuth/migrations/: 0001_initial.py  0002_hospital_osm_place_id.py  0003_alter_user_is_staff_alter_user_role.py
backEnd/main/apps/UserAuth/models/: __init__.py  hospital.py  location.py  models.py
backEnd/main/apps/UserAuth/services/: signals.py  views.py
backEnd/main/apps/adminDashboard/: apps.py  urls.py
backEnd/main/apps/donor/: admin.py
backEnd/main/apps/medicalOfficers/: apps.py  urls.py
backEnd/main/config/: settings.py  urls.py
backEnd/main/core/interfaces/: bloodRequest.py
backEnd/main/core/locations/: location.py
backEnd/main/main/: settings.py  urls.py
bbms_ui/: index.html  (+2 more)
(+186 files in other folders)
